--- a/package.json
+++ b/package.json
@@ -37,15 +37,13 @@
     "shelljs": "^0.5.3"
   },
   "dependencies": {
-    "@ionic-native/ble": "^4.20.0",
     "com.telerik.plugins.nativepagetransitions": "git+https://github.com/Telerik-Verified-Plugins/NativePageTransitions.git",
-    "cordova": "^9.0.0",
-    "cordova-android": "^8.1.0",
+    "cordova-android": "6.2.1",
     "cordova-bluetooth-classic": "https://github.com/blakeparkinson/cordova-bluetooth-classic.git",
     "cordova-ios": "^5.1.1",
     "cordova-plugin-advanced-http": "^2.3.0",
     "cordova-plugin-app-version": "0.1.9",
-    "cordova-plugin-ble-central": "^1.2.4",
+    "cordova-plugin-ble-central": "1.1.4",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-dialogs": "^1.3.4",
     "cordova-plugin-disable-bitcode": "^1.3.2",
@@ -104,7 +102,8 @@
       },
       "cordova-plugin-ble-central": {
         "BLUETOOTH_USAGE_DESCRIPTION": " "
-      }
+      },
+      "cordova-plugin-bluetoothle": {}
     },
     "platforms": [
       "android",
