--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "com.telerik.plugins.nativepagetransitions": "git+https://github.com/Telerik-Verified-Plugins/NativePageTransitions.git",
-    "cordova-android": "6.2.1",
+    "cordova-android": "8.1.0",
     "cordova-bluetooth-classic": "https://github.com/blakeparkinson/cordova-bluetooth-classic.git",
     "cordova-ios": "^5.1.1",
     "cordova-plugin-advanced-http": "^2.3.0",
@@ -66,6 +66,7 @@
     "gulp-sass": "^2.3.2",
     "ionic-plugin-keyboard": "git+https://github.com/driftyco/ionic-plugins-keyboard.git",
     "karma-ng-html2js-preprocessor": "^0.2.2",
+    "node-pre-gyp": "0.12.0",
     "phantomjs": "^2.1.7",
     "pulse-bluetooth-policy": "git+https://github.com/blakeparkinson/pulse-bluetooth-policy.git",
     "pulse-external-accessory": "git+https://github.com/blakeparkinson/pulse-external-accessory.git",
@@ -102,12 +103,11 @@
       },
       "cordova-plugin-ble-central": {
         "BLUETOOTH_USAGE_DESCRIPTION": " "
-      },
-      "cordova-plugin-bluetoothle": {}
+      }
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
