--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "karma-jasmine": "^0.3.7",
     "karma-phantomjs-launcher": "^0.2.3",
     "karma-wiredep": "^1.0.1",
-    "shelljs": "^0.5.3"
+    "shelljs": "^0.5.3",
+    "cordova-plugin-bluetoothle": "~4.5.6"
   },
   "dependencies": {
     "@ionic-native/ble": "^4.20.0",
@@ -102,13 +103,14 @@
       "cordova-plugin-advanced-http": {
         "OKHTTP_VERSION": "3.10.0"
       },
+      "cordova-plugin-bluetoothle": {},
       "cordova-plugin-ble-central": {
         "BLUETOOTH_USAGE_DESCRIPTION": " "
       }
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
