--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
     "angular-mocks": "^1.3.15",
     "babel-preset-es2015": "^6.3.13",
     "bower": "^1.3.3",
+    "cordova-android": "^9.0.0",
+    "cordova-ios": "^6.1.1",
+    "cordova-plugin-bluetoothle": "~4.5.6",
+    "cordova-plugin-geolocation": "^4.0.2",
+    "cordova-plugin-inappbrowser": "^4.0.0",
+    "cordova-plugin-ionic-webview": "^5.0.0",
+    "cordova-plugin-market": "^1.2.0",
+    "cordova-plugin-statusbar": "^2.4.3",
     "gulp-angular-templatecache": "^1.5.0",
     "gulp-babel": "^6.1.1",
     "gulp-cache": "^0.4.4",
@@ -34,30 +42,24 @@
     "karma-jasmine": "^0.3.7",
     "karma-phantomjs-launcher": "^0.2.3",
     "karma-wiredep": "^1.0.1",
-    "shelljs": "^0.5.3",
-    "cordova-plugin-bluetoothle": "~4.5.6"
+    "shelljs": "^0.5.3"
   },
   "dependencies": {
     "@ionic-native/ble": "^4.20.0",
+    "@ionic/cli": "^6.11.8",
     "com.telerik.plugins.nativepagetransitions": "git+https://github.com/Telerik-Verified-Plugins/NativePageTransitions.git",
-    "cordova": "^9.0.0",
-    "cordova-android": "^8.1.0",
     "cordova-bluetooth-classic": "https://github.com/blakeparkinson/cordova-bluetooth-classic.git",
-    "cordova-ios": "^5.1.1",
+    "cordova-open-native-settings": "^1.5.2",
     "cordova-plugin-advanced-http": "^2.3.0",
-    "cordova-plugin-app-version": "0.1.9",
-    "cordova-plugin-ble-central": "^1.2.4",
+    "cordova-plugin-ble-central": "^1.2.5",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-dialogs": "^1.3.4",
     "cordova-plugin-disable-bitcode": "^1.3.2",
     "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-file-transfer": "^1.5.1",
-    "cordova-plugin-inappbrowser": "^1.5.0",
     "cordova-plugin-insomnia": "git+https://github.com/EddyVerbruggen/Insomnia-PhoneGap-Plugin.git",
-    "cordova-plugin-ionic-webview": "^4.1.3",
     "cordova-plugin-nativestorage": "git+https://github.com/TheCocoaProject/cordova-plugin-nativestorage.git",
     "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
     "cordova-plugin-vibration": "^2.1.6",
     "cordova-plugin-webserver": "^1.0.3",
     "cordova-plugin-whitelist": "^1.3.4",
@@ -79,12 +81,8 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
       "cordova-bluetooth-classic": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-disable-bitcode": {},
@@ -95,22 +93,25 @@
       "cordova-plugin-insomnia": {},
       "com.telerik.plugins.nativepagetransitions": {},
       "cordova-plugin-dialogs": {},
-      "cordova-plugin-inappbrowser": {},
       "cordova-plugin-webserver": {},
       "pulse-external-accessory": {},
       "pulse-bluetooth-policy": {},
-      "cordova-plugin-app-version": {},
-      "cordova-plugin-advanced-http": {
-        "OKHTTP_VERSION": "3.10.0"
-      },
+      "cordova-plugin-advanced-http": {},
       "cordova-plugin-bluetoothle": {},
+      "cordova-open-native-settings": {},
       "cordova-plugin-ble-central": {
         "BLUETOOTH_USAGE_DESCRIPTION": " "
-      }
+      },
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-market": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
